<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Health Buddy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user1">User ID</string>
    <string name="Password1">Password</string>
    <string name="Login1">Login</string>
    <string name="SignUp1">Sign Up</string>
    <string name="title_activity_second">Second</string>
    <string name="username">User Name</string>
    <string name="password1">password</string>
    <string name="password2">password</string>
    <string name="email">Email id</string>
    <string name="question">Secret Question</string>
    <string name="answer">Secret Answer</string>
    <string name="mailId">E-mail ID</string>
    <string name="signup">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="activity">Activity</string>
    <string name="view">View Pics</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="camera">Camera</string>
    <string name="forgot">Forgot Password</string>
    <string name="click">Click</string>
    <string name="title_activity_app_tasks">AppTasks</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="title_activity_registeration">Registeration</string>
    <string name="title_activity_welcome_user">Welcome_user</string>
    <string name="select_photo">Select Photo</string>
    <string name="title_activity_own_cloud">OwnCloud</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_eat">Eat</string>
    <string name="title_activity_excercise">Excercise</string>
    <string name="title_activity_push">Push</string>
    <string name="title_activity_sit">Sit</string>
    <string name="exercise">Exercise</string>
    <string name="eat">Eat</string>
    <string name="settings">Settings</string>
    <string name="food">Food</string>
    <string name="confirm">Confirm</string>
    <string name="calories">Calories</string>
    <string name="push_ups">Push Ups</string>
    <string name="sit_ups">Sit Ups</string>
    <string name="run">Run</string>
    <string name="done">Done</string>
    <string name="saveLocation">Save Location</string>
    <string name="title_activity_exercise">Exercise</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_geo">Geo</string>
    <string name="title_activity_mail">MailActivity</string>
    <string name="title_activity_settings">Settings</string>

</resources>